Changed background image in contact.html

--- a/css/style.css
+++ b/css/style.css
@@ -570,7 +570,7 @@ M E D I A  Q U E R I E S
 #contact {
   margin-top: -50px;
   position: relative;
-  background: url("../img/booksign-md.jpg") no-repeat 50% 20% fixed;
+  background: url("../img/couple.jpg") no-repeat 50% 20% fixed;
   max-width: 100%;
   min-height: 350px;
   overflow: hidden;
@@ -585,7 +585,7 @@ M E D I A  Q U E R I E S
     padding-bottom: 2rem;
     letter-spacing: 3px; }
   #contact .primary-overlay {
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.6);
     position: absolute;
     top: 0;
     left: 0;
