--- a/scss/1-pages/_contact.scss
+++ b/scss/1-pages/_contact.scss
@@ -1,7 +1,7 @@
 #contact {
   margin-top: -50px;
   position: relative;
-  background: url('../img/booksign-md.jpg') no-repeat 50% 20% fixed;
+  background: url('../img/couple.jpg') no-repeat 50% 20% fixed;
   max-width: 100%;
   min-height:350px;
   overflow: hidden;
@@ -19,7 +19,7 @@
   }
 
   .primary-overlay {
-    background: rgba(0, 0, 0 , 0.7);
+    background: rgba(0, 0, 0 , 0.6);
     position: absolute;
     top: 0;
     left: 0;
