--- a/scss/1-pages/_home.scss
+++ b/scss/1-pages/_home.scss
@@ -43,7 +43,8 @@
     padding-bottom: 2rem;
   }
 
-  p {
+  p.leadText {
+    font-size: 1.5rem;
     line-height: 1.4;
     padding: 0 1.8rem 1.5rem;
   }
@@ -353,10 +354,12 @@ M E D I A  Q U E R I E S
 
       }
 
-      p {
-        padding-right: 12rem;
-        padding-left: 12rem;
+      p.leadText {
+        padding: 0 10rem 1.5rem;
+        font-size: 1.8rem;
       }
+
+
     }
 
 
